# demo-confluent-intelligence-f1

./: .gitignore  CLAUDE.md  README.md  USE-CASE.md  Walkthrough.md  deploy.py  pyproject.toml  service.yml
data/: driver_race_history_seed.sql  drivers.csv  drivers_seed.sql  generate_driver_race_history.py  generate_race_results.py  race_results_seed.sql
datagen/: Dockerfile  config.py  drivers.py  race_script.py  requirements.txt  simulator.py  telemetry.py
datagen/tests/: test_race_script.py  test_simulator.py  test_telemetry.py
demo-reference/: cdc_connector_config.json  enrichment_anomaly.sql  mq_connector_config.json  parse_standings.sql  streaming_agent.sql  streaming_agent_create_agent.sql  streaming_agent_pit_decisions.sql
docs/: SETUP-DBT-ADAPTER.md  SETUP-GENIE.md  SETUP-TABLEFLOW.md  USE-CASE.md  constraints.md  technical-discoveries.md
docs/superpowers/plans/: 2026-04-16-f1-pit-wall-demo.md  2026-04-20-avro-serialization-migration.md  2026-04-20-ecs-simulator-migration.md  2026-04-20-race-standings-temporal-join.md
docs/superpowers/specs/: 2026-04-20-avro-serialization-migration.md  2026-04-20-ecs-simulator-migration.md
scripts/: __init__.py  reset.py  setup.sh  setup_mcp.py  start-race.sh  stop-race.sh  teardown.sh
scripts/common/: __init__.py  api_keys.py  credentials.py  destroy.py  logging_utils.py  login_checks.py  terraform.py  terraform_runner.py  tfvars.py
tableflow/: EXAMPLE-QUERIES.md
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/core/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/demo/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/cluster/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  (+2 more)
(+20 files in other folders)
