[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-confluent-intelligence-f1"
version = "0.1.0"
description = "F1 Pit Wall AI Demo — Real-time pit strategy with Flink Streaming Agents on Confluent Cloud"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "python-dotenv>=1.0.0,<2.0",
    "rich>=13.0.0",
    "boto3>=1.26.0",
]

[project.scripts]
deploy = "deploy:main"
destroy = "scripts.common.destroy:main"
api-keys = "scripts.common.api_keys:main"
setup-mcp = "scripts.setup_mcp:main"

[project.urls]
Repository = "https://github.com/confluentinc/demo-confluent-intelligence-f1"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build.targets.sdist]
include = [
    "scripts/",
    "deploy.py",
    "README.md",
    "LICENSE",
]
exclude = [
    "/.git",
    "/terraform",
    "/datagen",
    "/data",
    "*.pyc",
    "__pycache__",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import order)
    "B",    # flake8-bugbear (likely bugs and design issues)
    "UP",   # pyupgrade (modernize Python syntax)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"datagen/drivers.py" = ["E501"]  # data rows are intentionally wide

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
